--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
 	"name": "backbone.maps",
-	"version": "0.0.1",
-	"description": "A Backbone JS extension for interacting with the Google Maps API (v3.10)",
+	"version": "0.1.0",
+	"description": "A Backbone JS extension for interacting with javascript maps APIs",
+	"license": "MIT",
 	"keywords": [
-		"jquery",
+		"backbone",
 		"plugin",
-		"range",
-		"slider",
-		"ui"
+		"maps"
 	],
 	"categories": [
-		"jquery plugins"
+		"backbone plugins"
 	],
 	"main": "src/backbone.maps.js",
 	"github": "https://github.com/rammstein4o/backbone.maps",
@@ -21,24 +20,18 @@
 		"type": "git",
 		"url": "https://github.com/rammstein4o/backbone.maps.git"
 	},
-	"licenses": [
-		{
-			"type": "MIT",
-			"url": "http://www.opensource.org/licenses/mit-license.php"
-		}
-	],
 	"devDependencies": {
-		"grunt": "^0.4.5",
-		"grunt-concurrent": "^0.5.0",
-		"grunt-contrib-clean": "^0.5.0",
-		"grunt-contrib-concat": "^0.3.0",
-		"grunt-contrib-connect": "^0.7.1",
-		"grunt-contrib-copy": "^0.5.0",
-		"grunt-contrib-jshint": "^0.11.2",
-		"grunt-contrib-uglify": "^0.4.0",
-		"grunt-contrib-watch": "^0.6.1",
-		"jshint-stylish": "^0.1.5",
-		"load-grunt-tasks": "^0.4.0",
-		"time-grunt": "^0.3.1"
+		"grunt": "0.4.5",
+		"grunt-concurrent": "0.5.0",
+		"grunt-contrib-clean": "0.5.0",
+		"grunt-contrib-concat": "0.3.0",
+		"grunt-contrib-connect": "0.7.1",
+		"grunt-contrib-copy": "0.5.0",
+		"grunt-contrib-jshint": "0.11.3",
+		"grunt-contrib-uglify": "0.4.1",
+		"grunt-contrib-watch": "0.6.1",
+		"jshint-stylish": "0.1.5",
+		"load-grunt-tasks": "0.4.0",
+		"time-grunt": "0.3.2"
 	}
 }
